# buglens

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: audio.py  main.py
src/api/: main.py  schemas.py
src/database/: models.py  session.py
src/engine/: audio.py  fusion.py  vision.py
src/ui/: dashboard.py
src/utils/: logging_config.py
src/worker/: celery_app.py  tasks.py
tests/: test_engine_pipeline.py
